package Protocol.WorldManager.WM2CM;
message MSG_WM2CM_Heartbeat {
	required int32 GroupId =  1;
	required int32 SubId =  2;
}

message MSG_WM2CM_Register {
	required int32 GroupId =  1;
	required int32 SubId =  2;
}

